// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlsList should renders correctly with checkbox type 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 6,
          "height": 60,
          "width": 60,
        }
      }
      value="1"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 6,
          "height": 60,
          "width": 60,
        }
      }
      value="2"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with checkbox type and horizontal 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 6,
          "height": 60,
          "width": 60,
        }
      }
      value="1"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 6,
          "height": 60,
          "width": 60,
        }
      }
      value="2"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with checkbox type and single 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 6,
          "height": 60,
          "width": 60,
        }
      }
      value="1"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 6,
          "height": 60,
          "width": 60,
        }
      }
      value="2"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with radio type 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "#2B78EE",
          "borderColor": "#2B78EE",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="1"
    >
      <View
        style={
          {
            "aspectRatio": 1,
            "borderColor": "#FFF",
            "borderRadius": 27,
            "borderWidth": 6,
            "width": 54,
          }
        }
      />
    </View>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="2"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with radio type and horizontal 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="1"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="2"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`ControlsList should renders correctly with radio type and single 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
      },
      undefined,
    ]
  }
>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="1"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      1
    </Text>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="2"
    />
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          undefined,
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;
